examples/test/testpolicy14427.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14427
  namespace: namespace75
spec:
  podSelector:
    matchLabels:
      key33: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value38
          key5: value7
          key0: value26
      podSelector:
        matchLabels:
          key41: value21
          key8: value7
